# argparse

./: Makefile  README.md  main.c
examples/: CMakeLists.txt
examples/01_person/: main.c
examples/02_dummy_tool/: main.c
lib/: CMakeLists.txt
lib/include/: argparse.h
lib/source/: argparse.c
